# forecast-command-line

./: .env  Cargo.toml  README.md
src/: main.rs
