[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
serde = { version = "1.0.163", features = ["derive"] }

